# bootroot

./: .biomeignore  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  agent.toml.compose  agent.toml.example  biome.json  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml  go.mod  mkdocs.yml  pyproject.toml  responder.toml.compose  responder.toml.example  state.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  e2e-extended.yml  e2e-nightly.yml  release.yml
agent/: Cargo.toml
agent/src/: acme.rs  eab.rs
cmd/agent/: main.go
cmd/bootroot/: main.go
deploy/: Dockerfile.agent  docker-compose.yml
docker/http01-responder/: Dockerfile
docker/step-ca/: Dockerfile
docs/en/: cli-examples.md  cli.md  concepts.md  configuration.md  e2e-ci.md  examples.md  faq.md  getting-started.md  index.md  installation.md  operations.md  remote-bootstrap.md  troubleshooting.md
docs/ko/: cli-examples.md  cli.md  concepts.md  configuration.md  e2e-ci.md  examples.md  faq.md  getting-started.md  index.md  installation.md  operations.md  remote-bootstrap.md  troubleshooting.md
docs/pdf/: cover.html.j2  styles.scss
monitoring/: prometheus.yml
monitoring/dashboards/: bootroot.json
openbao/: openbao.hcl
scripts/: bootroot-remote-sync.cron  bootroot-remote-sync.service  bootroot-remote-sync.timer  build-docs-pdf.sh  ci-local-e2e.sh  run-cli-scenarios.sh  run-local-scenarios.sh  update-ca-db-dsn.sh  validate-deploy-compose.sh
scripts/impl/: bootstrap-smoke-node.sh  generate-baseline-workspace.py  mock-openbao-server.py  run-baseline.sh  run-ca-key-rotation-recovery.sh  run-extended-suite.sh  run-harness-smoke.sh  run-local-lifecycle.sh  run-main-lifecycle.sh  run-main-remote-lifecycle.sh  run-reinit-recovery.sh  run-remote-lifecycle.sh  run-rotation-recovery.sh
scripts/preflight/: run-all.sh
specs/: bootroot-cli-design.en.md  bootroot-cli-design.ko.md  bootroot-cli-spec.en.md  bootroot-cli-spec.ko.md
src/: acme.rs  agent_args.rs  cert_chain.rs  cert_group.rs  cli.rs  commands.rs  config.rs  daemon.rs  db.rs  eab.rs  fast_poll.rs  fs_util.rs  hooks.rs  i18n.rs  input_validation.rs  kv_payload.rs  lib.rs  locale.rs  main.rs  openbao.rs  profile.rs  state.rs  tls.rs  toml_util.rs  trust_bootstrap.rs  utils.rs
src/acme/: client.rs  flow.rs  http01.rs  http01_protocol.rs  responder_client.rs  types.rs
src/cli/: args.rs  mod.rs  output.rs  prompt.rs
src/commands/: app.rs  ca.rs  clean.rs  compose_file.rs  constants.rs  dns_alias.rs  dotenv.rs  guardrails.rs  infra.rs  init.rs  mod.rs  monitoring.rs  openbao_auth.rs  openbao_unseal.rs  reinit.rs  rotate.rs  service.rs  status.rs  trust.rs  verify.rs
src/config/: defaults.rs  validation.rs
src/i18n/: en.rs  infra.rs  init.rs  ko.rs  mod.rs  reinit.rs  rotate.rs  service.rs  status.rs
tests/: acme_trust.rs  bootroot_agent_hardening.rs  bootroot_app.rs  bootroot_cli.rs  bootroot_http01_responder.rs  bootroot_remote.rs  bootroot_rotate.rs  bootroot_service.rs  bootroot_verify.rs  db_provision_integration.rs  docker_compose_security.rs  docker_e2e_baseline_matrix.rs  docker_e2e_ca_key_rotation_recovery.rs  docker_e2e_extended_suite.rs  docker_e2e_harness.rs  docker_e2e_local_lifecycle.rs  docker_e2e_main_lifecycle.rs  docker_e2e_main_remote_lifecycle.rs  docker_e2e_reinit_recovery.rs  docker_e2e_remote_lifecycle.rs  docker_e2e_rotation_recovery.rs  e2e_cert_group_chown.rs  e2e_multi_host_tls.rs  e2e_multi_host_tls_real_daemon.rs  e2e_remote_happy_path.rs  e2e_same_host_local_file.rs  monitoring_integration.rs  openbao_client.rs  openbao_stepca_integration.rs
(+84 files in other folders)
