[package]
name = "bootroot-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
poem = "3"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
