[package]
name = "bootroot-agent"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
humantime = "2"
poem = "3"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.18"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[[bin]]
name = "bootroot"
path = "src/main.rs"

[[bin]]
name = "bootroot-agent"
path = "src/bin/bootroot-agent.rs"

[[bin]]
name = "bootroot-http01-responder"
path = "src/bin/bootroot-http01-responder.rs"
