[package]
name = "bootroot-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI & Args
clap = { version = "4", features = ["derive", "env"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ACME & Crypto
instant-acme = "0.8"
rcgen = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
